--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,21 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "paths": {
+        "@app/*": [
+            "src/app/*"
+        ],
+        "@env/*": [
+            "src/environments/*"
+        ],
+        "@shared/*": [
+            "src/app/modules/shared/*"
+        ],
+        "@albums/*": [
+            "src/app/modules/albums/*"
+        ],
+    }
   },
   "include": [
     "src/**/*.spec.ts",
