routing, base for widget, base for navigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,9 @@
         "@albums/*": [
             "src/app/modules/albums/*"
         ],
+        "@widget/*": [
+            "src/app/modules/widget/*"
+        ],
     }
   },
   "angularCompilerOptions": {
