--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -19,6 +19,9 @@
         "@albums/*": [
             "src/app/modules/albums/*"
         ],
+        "@widget/*": [
+            "src/app/modules/widget/*"
+        ],
     }
   },
   "include": [
